# uhakiki-ai

./: ..env.production.swp  .gitignore  BIAS_FAIRNESS_STATEMENT.md  COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  GDPR_NIST_COMPLIANCE.md  MVP_CRITERIA_ANALYSIS.md  NATIONAL_SECURITY_FRAMING.md  PERFORMANCE_METRICS.md  PREMORTEM_ANALYSIS.md  README-DASHBOARD.md  README.md  SDLC_SECURE_DEVELOPMENT.md  UHAKIKI_AI_DEEP_DIVE_WALKTHROUGH.md  debug-test.py  debug_signup.js  fix_ocr_and_rad.py  frontend_fix.py  frontend_signup_debug.html  generate_metadata.py  generate_sample.py  kaggle.py  milvus_explorer.py  milvus_explorer_docker.py  presentation_outline.md  requirements.txt  review.txt  run_council.py  run_ocr.py  setup_vault.py  simple-test.py  sovereign_vault.db  test-backend.py  test-engine.py  test_casia_models.py  test_components.py  test_endpoint.py  test_extract_text.py  test_image_scanner.py  test_opencv_fix.py  (+6 more)
backend/: .dockerignore  .env.local  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  Dockerfile  PHASE_3_4_COMPLETION_PLAN.md  clean_vault.py  conftest.py  constraints.txt  facial_recognition_fix.md  guardian.sh  pyproject.toml  pytest.ini  requirements-old.txt  requirements.txt  run_local_test.sh  self_pentest.sh  sovereign_vault.db  train_models.py  train_models_fixed.py
backend/app/: __init__.py  main.py  main_simple.py
backend/data/: DATASETS_RESEARCH.md  mock_removal_report.json
backend/models/: __init__.py  biometric_scaler.pkl  biometric_verifier.pkl  document_classifier.pkl  document_scaler.pkl  fraud_detector.h5  fraud_detector.pkl  fraud_scaler.pkl  (+7 more)
(+175 files in other folders)
